--- a/Navigine/AndroidManifest.xml
+++ b/Navigine/AndroidManifest.xml
@@ -5,6 +5,8 @@
       android:versionName="1.5"
       android:installLocation="preferExternal">
     
+    <!--<uses-sdk android:minSdkVersion="18"/>-->
+    
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
