--- a/Navigine/AndroidManifest.xml
+++ b/Navigine/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.navigine.navigine"
-      android:versionCode="6"
-      android:versionName="1.5"
+      android:versionCode="7"
+      android:versionName="1.6"
       android:installLocation="preferExternal">
     
     <!--<uses-sdk android:minSdkVersion="18"/>-->
@@ -58,8 +58,12 @@
                   android:configChanges="keyboardHidden|orientation"
                   android:screenOrientation="portrait"/>
         
+        <activity android:name="BeaconActivity"
+                  android:configChanges="keyboardHidden|orientation"
+                  android:screenOrientation="portrait"
+                  android:label="Navigine.Notification"/>
+        
         <service  android:name="com.navigine.naviginesdk.BeaconService"  android:exported="true"/>
-        <activity android:name="com.navigine.naviginesdk.BeaconActivity" android:label="Navigine.Notification"/>
         
         <!-- Declaring broadcast receiver for BOOT_COMPLETED event -->
         <!--<receiver android:name="com.navigine.naviginesdk.BeaconReceiver" android:enabled="true" android:exported="true">
