--- a/Navigine/build.xml
+++ b/Navigine/build.xml
@@ -90,6 +90,7 @@
     <import file="${sdk.dir}/tools/ant/build.xml" />
     
     <target name="-pre-build">
+      <copy file="../IMU/IMU.jar" tofile="libs/IMU.jar"/>
       <copy file="../Navigine_SDK/Navigine_SDK.jar" tofile="libs/Navigine_SDK.jar"/>
     </target>
 
