--- a/Navigine/AndroidManifest.xml
+++ b/Navigine/AndroidManifest.xml
@@ -5,7 +5,7 @@
       android:versionName="1.6"
       android:installLocation="preferExternal">
     
-    <!--<uses-sdk android:minSdkVersion="18"/>-->
+    <uses-sdk android:minSdkVersion="18"/>
     
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
