--- a/Navigine/AndroidManifest.xml
+++ b/Navigine/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.navigine.navigine"
-      android:versionCode="7"
-      android:versionName="1.6"
+      android:versionCode="10"
+      android:versionName="1.9"
       android:installLocation="preferExternal">
     
-    <uses-sdk android:minSdkVersion="18"/>
+    <uses-sdk android:minSdkVersion="19"/>
     
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
@@ -66,11 +66,11 @@
         <service  android:name="com.navigine.naviginesdk.BeaconService"  android:exported="true"/>
         
         <!-- Declaring broadcast receiver for BOOT_COMPLETED event -->
-        <!--<receiver android:name="com.navigine.naviginesdk.BeaconReceiver" android:enabled="true" android:exported="true">
+        <receiver android:name="com.navigine.naviginesdk.BeaconReceiver" android:enabled="true" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
-        </receiver>-->
+        </receiver>
         
     </application>
 </manifest>
