--- a/Navigine/AndroidManifest.xml
+++ b/Navigine/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.navigine.navigine"
       android:versionCode="10"
-      android:versionName="1.9"
+      android:versionName="2.0"
       android:installLocation="preferExternal">
     
     <uses-sdk android:minSdkVersion="19"/>
@@ -19,22 +19,31 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     
     <application android:label="@string/app_name" 
-                 android:icon="@drawable/navigine"
+                 android:icon="@drawable/ic_launcher"
                  android:name=".NavigineApp"
                  android:largeHeap="true"
                  android:debuggable="false">
                  
-        <activity android:name="MainActivity"
+        <activity android:name="SplashActivity"
                   android:label="@string/app_name"
                   android:configChanges="keyboardHidden|orientation"
-                  android:screenOrientation="portrait">
+                  android:screenOrientation="portrait"
+                  android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         
+        <activity android:name="LoginActivity"
+                  android:configChanges="keyboardHidden|orientation"
+                  android:screenOrientation="portrait"/>
+        
         <activity android:name="LoaderActivity"
+                  android:configChanges="keyboardHidden|orientation"
+                  android:screenOrientation="portrait"/>
+        
+        <activity android:name="LocationInfoActivity"
                   android:configChanges="keyboardHidden|orientation"
                   android:screenOrientation="portrait"/>
         
@@ -50,7 +59,7 @@
                   android:label="@string/file_picker_name"
                   android:screenOrientation="portrait"/>
         
-        <activity android:name="TextActivity"
+        <activity android:name="DebugActivity"
                   android:configChanges="keyboardHidden|orientation"
                   android:screenOrientation="portrait"/>
         
