--- a/Navigine/AndroidManifest.xml
+++ b/Navigine/AndroidManifest.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.navigine.navigine"
-      android:versionCode="14"
-      android:versionName="4.0.3"
+      android:versionCode="15"
+      android:versionName="4.0.4"
       android:installLocation="preferExternal">
     
     <uses-sdk android:minSdkVersion="19"/>
     
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
