--- a/NavigineDemo/app/build.gradle
+++ b/NavigineDemo/app/build.gradle
@@ -23,12 +23,12 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
-    compile files('libs/Navigine_SDK.jar')
+    compile files('libs/NavigineSDK.jar')
 }
 
 task copyTask(type: Copy) {
-  println "Copying Navigine_SDK.jar"
-  from '../../Navigine_SDK/Navigine_SDK.jar'
+  println "Copying NavigineSDK.jar"
+  from '../../NavigineSDK/NavigineSDK.jar'
   into 'libs/'
 }
 
