--- a/GeoService/GeoServiceApp/AndroidManifest.xml
+++ b/GeoService/GeoServiceApp/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.navigine.geo_service"
+      package="com.navigine.geo_service_app"
       android:versionCode="1"
       android:versionName="1.0">
     
@@ -8,9 +8,11 @@
     
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     
     <application android:label="Geo Service"
@@ -26,13 +28,23 @@
             </intent-filter>
         </activity>
         
-        <service android:name="GeoService" android:exported="true"/>
-        
-        <!-- Declaring broadcast receiver for BOOT_COMPLETED event -->
+        <!-- Declaring BootReceiver (for GeoService to start automatically on device reboot) -->
         <receiver android:name="BootReceiver" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
                 <action android:name="android.intent.action.PACKAGE_REPLACED"/>
+            </intent-filter>
+        </receiver>
+        
+        <!-- Declaring GeoService -->
+        <service android:name="com.navigine.geo_service.GeoService" android:exported="true"/>
+        
+        <!-- Declaring GeoReceiver -->
+        <receiver android:name="com.navigine.geo_service.GeoReceiver" android:exported="true">
+            <intent-filter>
+                <action android:name="com.navigine.geo_service.SERVICE_START"/>
+                <action android:name="com.navigine.geo_service.SERVICE_STOP"/>
+                <action android:name="com.navigine.geo_service.SERVICE_WAKE"/>
             </intent-filter>
         </receiver>
         
