--- a/GeoService/GeoServiceApp/build.xml
+++ b/GeoService/GeoServiceApp/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="GeoService" default="help">
+<project name="GeoServiceApp" default="help">
 
     <!-- The local.properties file is created and updated by the 'android' tool.
          It contains the path to the SDK. It should *NOT* be checked into
@@ -88,5 +88,9 @@
     -->
     <!-- version-tag: 1 -->
     <import file="${sdk.dir}/tools/ant/build.xml" />
-
+    
+    <target name="-pre-build">
+      <copy file="../GeoService/GeoService.jar" tofile="libs/GeoService.jar"/>
+    </target>
+    
 </project>
