--- a/GeoService/GeoServiceApp/AndroidManifest.xml
+++ b/GeoService/GeoServiceApp/AndroidManifest.xml
@@ -6,9 +6,13 @@
     
     <uses-sdk android:minSdkVersion="18"/>
     
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     
     <application android:label="Geo Service"
                  android:icon="@drawable/ic_launcher">
