Added push notifications for entering zone events

--- a/NavigineDemo/app/src/main/AndroidManifest.xml
+++ b/NavigineDemo/app/src/main/AndroidManifest.xml
@@ -34,6 +34,11 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait">
         </activity>
+        
+        <activity android:name=".NotificationActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
