--- a/NavigineDemo/app/src/main/AndroidManifest.xml
+++ b/NavigineDemo/app/src/main/AndroidManifest.xml
@@ -31,8 +31,7 @@
         </activity>
 
         <activity android:name=".MainActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:screenOrientation="portrait">
+            android:configChanges="keyboardHidden|orientation|screenSize">
         </activity>
         
         <activity android:name=".NotificationActivity"
