--- a/NavigineDemo/app/build.gradle
+++ b/NavigineDemo/app/build.gradle
@@ -23,13 +23,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile files('libs/NavigineSDK.jar')
+    compile 'com.github.fedormex:NavigineSDK-wrapper:v3.15'
 }
-
-task copyTask(type: Copy) {
-  println "Copying NavigineSDK.jar"
-  from '../../NavigineSDK/NavigineSDK.jar'
-  into 'libs/'
-}
-
-preBuild.dependsOn copyTask
