--- a/NavigineDemo/app/build.gradle
+++ b/NavigineDemo/app/build.gradle
@@ -17,11 +17,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile 'com.github.fedormex:NavigineSDK-wrapper:v3.15'
+    compile 'com.github.Navigine:Android-SDK:20180508+'
 }
