--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'java'
 apply plugin: 'maven'
 
 group 'com.navigine'
-version '20180509'
+version '20180508-r3'
 
 sourceCompatibility = 1.8
 
